Removed fixed property of sidebar on results page as it overflows the page on a screen size below 1680x1050

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ a.selected {
 }
 
 .results-sidebar-wrapper {
-	position: fixed;
+	
 }
 
 .results-sidebar-wrapper img {
